creating data medels services and utilities

--- a/src/Apbdtest/Apbdtest/appsettings.json
+++ b/src/Apbdtest/Apbdtest/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1432;Database=master;User Id=sa;Password=D0ck3rP@ss!;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
